Added the package 'SublimeAmxxPawn' as git submodule.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Theme - NotepadPlusPlus"]
 	path = Theme - NotepadPlusPlus
 	url = https://github.com/evandrocoan/Sublime3-Theme-NotepadPlusPlus
+[submodule "SublimeAmxxPawn"]
+	path = SublimeAmxxPawn
+	url = https://github.com/evandrocoan/SublimeAmxxPawn
