Added the Invert Selection to context menu and command menu.

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,12 @@
 !/Local History
 !/Local History/*
 
+!/Invert Selection
+!/Invert Selection/*
+
+!/Origami
+!/Origami/*
+
 
 !.gitattributes
 !.gitmodules
