Added the package ExportHtml and new Context menu entries.

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,12 @@
 !/Origami
 !/Origami/*
 
+!/Project Specific Syntax Settings
+!/Project Specific Syntax Settings/*
+
+!/ExportHtml
+!/ExportHtml/*
+
 
 !.gitattributes
 !.gitmodules
