Added the Copy Filepath With Line Numbers context menus entry into ExportHtml.

--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,9 @@
 !/FuzzyFileNav
 !/FuzzyFileNav/*
 
+!/Copy Filepath With Line Numbers
+!/Copy Filepath With Line Numbers/*
+
 
 !.gitattributes
 !.gitmodules
