Added the CopyWithLineNumbersReloaded context menus entries into ExportHtml.

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,9 @@
 !/Copy Filepath With Line Numbers
 !/Copy Filepath With Line Numbers/*
 
+!/CopyWithLineNumbersReloaded
+!/CopyWithLineNumbersReloaded/*
+
 
 !.gitattributes
 !.gitmodules
