--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "Package Control"]
 	path = Package Control
 	url = https://github.com/evandrocoan/package_control
+[submodule "Theme - SoDaReloaded"]
+	path = Theme - SoDaReloaded
+	url = https://github.com/evandrocoan/SoDaReloaded-Theme
