Created a automatic versioning system on README.MD

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@
 
 # Force the following filetypes to have unix eols, so Windows does not break them
 *.* text eol=lf
+* text eol=lf
 
 # Custom for Visual Studio
 *.cs diff=csharp
