Renamed the SublimeTextToolBar to Toolbar

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "SublimeTextToolBar"]
-	path = SublimeTextToolBar
-	url = https://github.com/evandrocoan/SublimeTextToolBar
 [submodule "SideBarEnhancements"]
 	path = SideBarEnhancements
 	url = https://github.com/evandrocoan/SideBarEnhancements
@@ -28,3 +25,6 @@
 [submodule "Notepad++ Theme"]
 	path = Notepad++ Theme
 	url = https://github.com/evandrocoan/SublimeNotepadPlusPlusTheme
+[submodule "Toolbar"]
+	path = Toolbar
+	url = https://github.com/evandrocoan/SublimeTextToolBar
