Added the SublimeAMXX_Editor as a git submodule disabled by default

--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "SyncedSideBar"]
 	path = SyncedSideBar
 	url = https://github.com/evandrocoan/SyncedSideBar
+[submodule "amxmodx"]
+	path = amxmodx
+	url = https://github.com/evandrocoan/SublimeAMXX_Editor
