Added the SQL new tools/packages/buildsystem.

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@
 /backrefs/*
 /ssl-linux/*
 /BetterFindBuffer/*
+/SQLTools/*
 
 # Added new dependency ignore rule.
 # It was not working on linux with git 2.9.3 as just /Pyv8/*, or /Pyv8/linux32-p3/*.
