--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@
 /ssl-linux/*
 /BetterFindBuffer/*
 /SQLTools/*
+/Anaconda/*
 
 # Added new dependency ignore rule.
 # It was not working on linux with git 2.9.3 as just /Pyv8/*, or /Pyv8/linux32-p3/*.
