Installed the package SublimeREPL.

--- a/User/.gitignore
+++ b/User/.gitignore
@@ -12,7 +12,7 @@
 /Terminal.sublime-settings
 /SBSCompare.tmTheme
 /Package Control.user-ca-bundle
-
+/.SublimeREPLHistory/*
 
 
 /amxx.sublime-settings
