--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@
 /BetterFindBuffer/*
 /SQLTools/*
 /Anaconda/*
+/SublimeREPL/*
 
 # Added new dependency ignore rule.
 # It was not working on linux with git 2.9.3 as just /Pyv8/*, or /Pyv8/linux32-p3/*.
