--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "amxmodx"]
 	path = amxmodx
 	url = https://github.com/evandrocoan/SublimeAMXX_Editor
+[submodule "Side-by-Side Settings"]
+	path = Side-by-Side Settings
+	url = https://github.com/evandrocoan/sxs-settings
