--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@
 /Anaconda/*
 /SublimeREPL/*
 /Syntax Highlighting for Sass/*
+/zz File Icons/*
 
 # Added new dependency ignore rule.
 # It was not working on linux with git 2.9.3 as just /Pyv8/*, or /Pyv8/linux32-p3/*.
