--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@
 /SublimeREPL/*
 /Syntax Highlighting for Sass/*
 /zz File Icons/*
+/Random Everything/*
 
 # Added new dependency ignore rule.
 # It was not working on linux with git 2.9.3 as just /Pyv8/*, or /Pyv8/linux32-p3/*.
