--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@
 /Syntax Highlighting for Sass/*
 /zz File Icons/*
 /Random Everything/*
+/ConvertToUTF8/*
 
 # Added new dependency ignore rule.
 # It was not working on linux with git 2.9.3 as just /Pyv8/*, or /Pyv8/linux32-p3/*.
