Added the new zz File Icons package name to the gitignore list.

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@
 /SublimeREPL/*
 /Syntax Highlighting for Sass/*
 /zz File Icons/*
+/A File Icon/*
 /Random Everything/*
 /ConvertToUTF8/*
 /Sublime Tutor/*
