Added the new package PowerCursors  as git submodule to
add/remove/select of multiple cursors more convenient with keyboard,
https://github.com/evandrocoan/PowerCursors

Issue:
https://github.com/evandrocoan/SublimeTextStudio/issues/8

--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule ".versioning"]
 	path = .versioning
 	url = https://github.com/evandrocoan/.versioning
+[submodule "PowerCursors"]
+	path = PowerCursors
+	url = https://github.com/evandrocoan/PowerCursors
