Upgraded the package zz File Icon name to zzz A File Icon zzz

--- a/.gitignore
+++ b/.gitignore
@@ -28,8 +28,7 @@
 /SQLTools/*
 /Anaconda/*
 /Syntax Highlighting for Sass/*
-/zz File Icons/*
-/A File Icon/*
+/zzz A File Icon zzz/*
 /Random Everything/*
 /ConvertToUTF8/*
 /Sublime Tutor/*
